--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-387.2KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.59MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.47MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-407.4KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
-  - {name: 🇷🇺 俄罗斯联邦-367.7KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-983.8KB/s(Youtube:不良林), server: c8s2.jamjams.net, port: 30162, type: ss, cipher: aes-256-gcm, password: eWh5br48eraTyoJS}
-  - {name: 🇨🇳 中国-2.18MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.64MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-407.4KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
+  - {name: 🇨🇦 加拿大-1.60MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇬🇧 英国-309.3KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-1.08MB/s(Youtube:不良林), server: 52.140.223.72, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
+  - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s2.upyun.online, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-402.8KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-232.3KB/s(Youtube:不良林), server: 213.183.59.190, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇳🇱 荷兰-218.0KB/s(Youtube:不良林), server: 213.183.59.190, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-367.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-983.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
       - 🇬🇧 英国-309.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-367.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-983.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
       - 🇬🇧 英国-309.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-367.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-983.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
       - 🇬🇧 英国-309.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-367.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-983.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
       - 🇬🇧 英国-309.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-367.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-983.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
       - 🇬🇧 英国-309.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-367.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-983.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
       - 🇬🇧 英国-309.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-367.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-983.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-407.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
       - 🇬🇧 英国-309.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
