--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-402.8KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇨🇦 加拿大-1.60MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇻🇳 越南-1.94MB/s(Youtube:不良林), server: hcm3.aqvpn.me, port: 443, type: trojan, password: d00083c7-e3db-4707-a24d-5662912368ff, sni: hcm3.aqvpn.me, skip-cert-verify: true}
-  - {name: 🇨🇭 瑞士-1.45MB/s(Youtube:不良林), server: 185.126.116.125, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-298.0KB/s(Youtube:不良林), server: hcm.aqvpn.me, port: 443, type: trojan, password: d00083c7-e3db-4707-a24d-5662912368ff, sni: hcm.aqvpn.me, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.24MB/s(Youtube:不良林), server: mplsgz1.ggbbba.xyz, port: 45786, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
-  - {name: 🇨🇳 中国-1.48MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇬🇧 英国-3.19MB/s(Youtube:不良林), server: 51.89.42.154, port: 443, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120211331422, ws-headers: {Host: 51.89.42.154}}
-  - {name: 🇺🇸 美国-272.4KB/s(Youtube:不良林), server: hk.aqvpn.me, port: 443, type: trojan, password: d00083c7-e3db-4707-a24d-5662912368ff, sni: hk.aqvpn.me, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-531.2KB/s(Youtube:不良林), server: 213.183.53.208, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇷🇺 俄罗斯联邦-821.1KB/s(Youtube:不良林), server: 213.183.53.208, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇳🇱 荷兰-218.0KB/s(Youtube:不良林), server: 213.183.59.190, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇷🇺 俄罗斯联邦-427.9KB/s(Youtube:不良林), server: 213.183.53.207, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇮🇳 印度-1.46MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
+  - {name: 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林), server: 213.183.53.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇷🇺 俄罗斯联邦-823.1KB/s(Youtube:不良林), server: 213.183.53.221, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林), server: 213.183.53.221, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇷🇺 俄罗斯联邦-253.0KB/s(Youtube:不良林), server: 213.183.53.207, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-402.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.94MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇻🇳 越南-298.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-272.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-531.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-821.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-427.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-823.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-253.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-402.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.94MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇻🇳 越南-298.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-272.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-531.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-821.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-427.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-823.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-253.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-402.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.94MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇻🇳 越南-298.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-272.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-531.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-821.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-427.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-823.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-253.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-402.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.94MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇻🇳 越南-298.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-272.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-531.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-821.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-427.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-823.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-253.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-402.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.94MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇻🇳 越南-298.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-272.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-531.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-821.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-427.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-823.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-253.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-402.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.94MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇻🇳 越南-298.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-272.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-531.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-821.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-427.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-823.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-253.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-402.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.94MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇻🇳 越南-298.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-272.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-531.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-821.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-427.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-823.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-253.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
